--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -10,9 +10,8 @@
       name="description"
       content="¿Cansado de rankear y perder por la culpa de los demás? No pierdas más el tiempo, ven a eLoleros y contrata nuestros servicios."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>eLoleros</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
